navbar editet for logon and log out

--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -112,23 +112,10 @@
                         <span class="nav-link-inner--text d-lg-none">Github</span>
                     </a>
                 </li>
-                <li class="nav-item d-none d-lg-block ml-lg-4">
-                    <a
-                            [routerLink]="['/login']" class="btn btn-neutral btn-icon">
-                        <span class="btn-inner--icon">
-                             <i class="fa fa-sign-in mr-2"></i>
-                        </span>
-                        <span class="nav-link-inner--text">Login</span>
-                    </a>
-                </li>
-                <li class="nav-item d-none d-lg-block ml-lg-4">
-                    <a [routerLink]="['register']" class="btn btn-neutral btn-icon">
-                        <span class="btn-inner--icon">
-                          <i class="fa fa-user-plus mr-2"></i>
-                        </span>
-                        <span class="nav-link-inner--text">Register</span>
-                    </a>
-                </li>
+                <app-logonnav *ngIf="(isloged|async).user.id"></app-logonnav>
+                <app-logoutnav *ngIf="!(isloged|async).user.id"></app-logoutnav>
+
+
             </ul>
         </div>
     </div>
